[FEAT] RESTful 확인용 예제 추가